# bitshuffle

./: .gitignore  .travis.yml  MANIFEST.in  README.md  README.rst  pyproject.toml  requirements.txt  setup.cfg.example  setup.py
.github/workflows/: install_hdf5.sh  lint.yml  main.yml  ubuntu.yml  wheels.yml
bitshuffle/: __init__.py  ext.pyx  h5.pyx  mockup.py
bitshuffle/tests/: make_regression_tdata.py  test_bittranspose.py  test_ext.py  test_h5filter.py  test_h5plugin.py  test_mockup.py  test_regression.py
bitshuffle/tests/data/: lz4_regression_0.3.6.h5  zstd_regression_0.3.6.h5
conda-recipe/: setup.py.patch
ext/: bittranspose.c  bt.pyx
lzf/: lzf_filter.c
scripts/: sandbox.py
src/: bitshuffle.c  bitshuffle.h  bitshuffle_core.c  bitshuffle_core.h  bitshuffle_internals.h  bshuf_h5filter.c  bshuf_h5filter.h  bshuf_h5plugin.c  bshuf_lz4.c  bshuf_lz4.h  h5filter.c  hdf5_dl.c  iochain.c  iochain.h  lzf_h5plugin.c
tests/: conftest.py  make_regression_tdata.py  test_ext.py  test_h5filter.py  test_h5plugin.py  test_regression.py
tests/data/: regression_0.1.3.h5  regression_0.3.6.h5
