[tool.poetry]
name = "bitshuffle"
version = "0.4.2"
description = "Filter for improving compression of typed binary data."
authors = ["Kiyoshi Masui"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=2.7, >=3.3"
setuptools = ">=0.7"
Cython = ">=0.19"
numpy = ">=1.6.1"
h5py = ">=2.4.0"

[build-system]
requires = [
    "poetry-core>=1.0.0",
    "setuptools>=0.7",
    "Cython>=0.19",
    "oldest-supported-numpy",
    "h5py>=2.4.0",
]
build-backend = "poetry.core.masonry.api"
